add skeletons for table routes and CRUD controllers
